Optimize boolean masked operations